@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-31T02:03:11Z",
+  "timestamp" : "2022-07-31T08:21:00Z",
   "count_outdated" : 2304,
   "uniques_outdated" : 518,
-  "count" : 2331,
-  "uniques" : 534,
+  "count" : 2333,
+  "uniques" : 536,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
@@ -81,6 +81,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-31T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
