@@ -1,6 +1,6 @@
 {
-  "count": 27,
-  "uniques": 6,
+  "count": 29,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-07-20T00:00:00Z",
@@ -56,6 +56,11 @@
       "timestamp": "2022-07-30T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-31T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
